新增被邀请人消耗额度
